--- a/solutions/day-19/level-1/src/css/style.css
+++ b/solutions/day-19/level-1/src/css/style.css
@@ -5,39 +5,80 @@
     font-family: 'Open Sans'
 }
 
-header {
-    background:#d7a0e4;
-    padding:30px 0;
-    text-align: center;
-}
-
-.heading-gray {
-    color:gray;
-    font-size: 28px;
-    margin-left: 5px;
-    margin-right:5px;
-}
-
-.flex-alignment {
-    display: flex;
-    justify-content: center;
-    align-content: space-between;
-    align-items: center;
-}
 
 h1, h2 {
     margin-bottom: 15px;
 }
 p{
     margin-bottom: 10px;
+    font-size: 18px;
 }
-.loading{
+
+header {
+    background:#c3b6ff;
+    padding:30px 0;
+    text-align: center;
+}
+
+.header-feature-cat {
+    color:#a607ff;
+    font-size: 28px;
+    margin-left: 5px;
+    margin-right:5px;
+}
+
+.header-features {
+    display: flex;
+    justify-content: center;
+    align-content: space-between;
+    align-items: center;
+}
+
+.loader{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background:#d7a0e4;
+    background:#c3b6ff;
 }
+
+.lds-ring {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+
+  .lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border: 8px solid #fff;
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: #fff transparent transparent transparent;
+  }
+  
+  .lds-ring div:nth-child(1) {
+    animation-delay: -0.45s;
+  }
+  .lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
+  }
+  .lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+  }
+  @keyframes lds-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
 
 main {
     display: flex;
@@ -46,7 +87,7 @@ main {
     margin-top: 50px;
 }
 
-.cat {
+.cat-card {
     max-width: 600px;
     width:100%;
     margin-bottom:20px;
@@ -54,38 +95,34 @@ main {
     box-shadow: 1px 4px 5px rgb(204, 204, 204);
     
 }
-.cat-background {
+.cat-card-image {
     overflow: hidden;
 }
 
-.cat-text {
+.cat-card-description {
     padding:20px 15px 15px ;
 }
 
-.cat-text h1 {
+.cat-card-description h1 {
     font-size: 26px;
     margin-bottom: 5px;
 }
 
-.cat-text h3 {
+.cat-card-description h3 {
     margin-bottom: 10px;
 }
 
-.cat-text-gray {
+.cat-card-description-color-gray {
     color:gray;
     font-weight: bold;
 }
 
-.cat-background img{
+.cat-card-image img{
     max-width:100%;
     min-width:100%;
     transition: ease-out 0.9s all
 }
 
-.cat-background:hover img{
+.cat-card-image:hover img{
     transform: scale(1.5)
-}
-
-p{
-    font-size: 18px;
 }
