--- a/solutions/day-24/level-1/src/css/style.css
+++ b/solutions/day-24/level-1/src/css/style.css
@@ -29,6 +29,11 @@ header p {
     font-size: 25px;
     font-weight: bold;
 }
+header i {
+    color: orange;
+    display: inline-block;
+    margin-top:14px;
+}
 
 /* SEARCH */
 
@@ -42,14 +47,15 @@ header p {
     width: 100%;
     margin: 0 auto;
     display: block;
-    padding: 15px 50px;
+    padding: 15px 30px;
     border-radius: 30%;
     background-color: rgb(249 233 251);
     border: 4px solid rgb(255 207 250);
     border-radius: 35px;
     color: orange;
-    font-size: 25px;
+    font-size: 18px;
     font-weight: bold;
+    outline: none;
 }
 
 .country{
@@ -94,4 +100,76 @@ header p {
 .card-country-text p span{
     font-weight: bold;
     color:rgb(77, 77, 77)
+}
+.page-404 {
+    text-align: center;
+}
+
+.page-404 h3{
+    font-size: 80px;
+}
+
+.page-404 p {
+    font-size: 20px;
+}
+
+/* Stadistics */
+
+.stadistics {
+    background-color: #fff;
+    padding:15px;
+}
+
+.stadistics-container {
+    background-color:rgb(238, 238, 238);
+    padding:15px;
+}
+
+.stadistics-wrapper {
+    padding:10px;
+    border:1px solid gray;
+    box-shadow: 1px 1px solid gray;
+}
+
+.stadistics-wrapper-inner {
+    max-width: 700px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.stadistics-item{
+    display:flex;
+    justify-content: space-around;
+    margin-bottom: 10px;
+    align-items: center;
+}
+
+.country-bar {
+    max-width: 300px;
+    width: 100%;
+}
+
+.country-name,
+.country-value {
+    font-size: 25px;
+    font-weight: bold;
+}
+
+progress[value] {
+    /* Reset the default appearance */
+    -webkit-appearance: none;
+     appearance: none;
+  
+    width: 300px;
+    height: 30px;
+}
+
+progress[value]::-webkit-progress-bar {
+    background-color: #eee;
+
+  }
+
+progress[value]::-webkit-progress-value {
+    background-color: orange;
+    border-radius: 3px;
 }
